--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-clap = "4.5.7"
+clap = { version = "4.5.7", features = ["derive"] }
 magic-crypt = "3.1.13"
