--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 inquire = "0.7.5"
 magic-crypt = "3.1.13"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
