--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.5.7", features = ["derive"] }
 inquire = "0.7.5"
 magic-crypt = "3.1.13"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+tabled = "0.15.0"
